--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,15 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+      <button routerLink="/evaluation" type="button" class="btn btn-primary btn-lg btn-block">
+        <i class="fas fa-clipboard-list"></i>  Evaluación
+      </button>
+      <button routerLink="/administrator"  type="button" class="btn btn-primary btn-lg btn-block">
+        <i class="fas fa-database"></i>   Admnistrador</button>
+    </div>
+    <div class="col-sm">
+    </div>
+  </div>
+</div>
