--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -1,3 +1,13 @@
-<p>
-  evaluation works!
-</p>
+<div class="container-fluid login">
+  <form>
+    <div class="form-group">
+      <label for="uname">Usuario</label>
+      <input type="text" class="form-control" id="uname" required>
+    </div>
+    <div class="form-group">
+      <label for="psw">Contraseña</label>
+      <input type="password" class="form-control" id="psw" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Aceptar</button>
+  </form>
+</div>
