add label acceso a administrador login administrator

--- a/src/app/adminstrator/adminstrator.component.html
+++ b/src/app/adminstrator/adminstrator.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid login">
+  <p>Acceso a administrador</p>
   <form>
     <div class="form-group">
       <label for="uname">Usuario</label>
