add component administrator menu settings and images files source

--- a/src/app/adminstrator/adminstrator.component.html
+++ b/src/app/adminstrator/adminstrator.component.html
@@ -9,6 +9,6 @@
       <label for="psw">Contraseña</label>
       <input type="password" class="form-control" id="psw" required>
     </div>
-    <button type="submit" class="btn btn-primary">Aceptar</button>
+    <button routerLink="/administrator-menu"  type="submit" class="btn btn-primary">Aceptar</button>
   </form>
 </div>
